--- a/action.yml
+++ b/action.yml
@@ -9,13 +9,13 @@ inputs:
   all_files:
     description: "Run [ESlint](https://eslint.org) on all matching files."
     required: false
-    default: false
+    default: 'false'
   config_path:
-    description: "[ESlint](https://eslint.org/) [configuration file](https://eslint.org/docs/user-guide/configuring/). Optionally omit this input for Mono repositories."
+    description: "[ESLint](https://eslint.org/) [configuration file](https://eslint.org/docs/user-guide/configuring/). Optionally omit this input for Mono repositories."
     required: false
     default: ''
-  ignore_path:
-    description: "[ESlint](https://eslint.org/) [ignore file](https://eslint.org/docs/user-guide/configuring/ignoring-code)"
+  ignore_patterns:
+    description: "[ESLint](https://eslint.org/docs/latest/use/configure/ignore) [configuration file](https://eslint.org/docs/latest/use/configure/ignore#ignoring-files) ignores key. Optionally ignore files in the `ignores` key from being passed to ESLint not required when `all_files` is set to `true`."
     required: false
     default: ''
   file_extensions:
@@ -30,7 +30,7 @@ inputs:
   skip_annotations:
     description: "Skip running reviewdog i.e don't add any annotations."
     required: false
-    default: false
+    default: 'false'
   level:
     description: "Report level for reviewdog (info,warning,error)"
     required: false
@@ -78,10 +78,11 @@ runs:
     - name: Get changed files
       id: changed-files
       uses: tj-actions/changed-files@v44
+      if: inputs.all_files == 'false'
       with:
         path: ${{ inputs.path }}
         files: ${{ inputs.file_extensions }}
-        files_ignore_from_source_file: ${{ inputs.ignore_path }}
+        files_ignore: ${{ inputs.ignore_patterns }}
         diff_relative: true
         skip_initial_fetch: ${{ inputs.skip_initial_fetch }}
         use_rest_api: ${{ inputs.use_rest_api }}
@@ -105,7 +106,6 @@ runs:
         INPUT_LEVEL: ${{ inputs.level }}
         INPUT_ALL_FILES: ${{ inputs.all_files }}
         INPUT_CONFIG_PATH: ${{ inputs.config_path }}
-        INPUT_IGNORE_PATH: ${{ inputs.ignore_path }}
         INPUT_CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
         INPUT_EXTRA_ARGS: ${{ inputs.extra_args }}
         INPUT_FILTER_MODE: ${{ inputs.filter_mode }}
