--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -105,7 +105,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [ubuntu-latest, windows-latest, macos-latest, macos-11, windows-2022]
+        platform: [ubuntu-latest, windows-latest, macos-latest]
         fetch-depth: [0, 1]
 
     steps:
