--- a/action.yml
+++ b/action.yml
@@ -77,6 +77,8 @@ runs:
   steps:
     - uses: reviewdog/action-setup@v1
       if: inputs.skip_annotations == 'false'
+      with:
+        reviewdog_version: v0.20.0
     - name: Get changed files
       id: changed-files
       uses: tj-actions/changed-files@v44
