chore(deps): upgrade reviewdog (#1901)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -107,7 +107,7 @@ jobs:
       matrix:
         platform: 
           - ubuntu-latest
-          # - windows-latest
+          - windows-latest
           - macos-latest
         fetch-depth: [0, 1]
 
